--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".EditShowShoppingListActivity"></activity>
+        <activity android:name=".EditShowShoppingListActivity"
+            android:windowSoftInputMode="stateAlwaysHidden"
+            ></activity>
         <activity android:name=".AddList" />
         <activity android:name=".AllLists" />
         <activity android:name=".MainActivity">
